integrate components in streamlit gallery

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,18 @@
 streamlit
+streamlit_elements
+st_pages
+streamlit_tags
+streamlit_searchbox
+streamlit_option_menu
+
+typing
 numpy
+random
+functools
+sqlalchemy
 datetime
 pandas
+io
+
+
+openpyxl
